refactor: 유효성검사 핸들러 및 로그인 인증 후처리